Added a whole bunch of global constants and sytles

--- a/_shared/footer.jade
+++ b/_shared/footer.jade
@@ -3,10 +3,10 @@ footer(role="contentinfo")
 		dl
 			dt Email
 			dd
-				a(href="mailto:eligundry@gmail.com") eligundry@gmail.com
+				a(href="mailto:#{ email }") #{ email }
 			dt Phone
 			dd 330.828.6147
 			dt URL
 			dd
-				a(href="https://twitter.com/EliGundry") Twitter
-				a(href="https://github.com/eligundry") GitHub
+				a(href="https://twitter.com/#{ url.twitter }") Twitter
+				a(href="https://github.com/#{ url.github }") GitHub
