--- a/_layout.jade
+++ b/_layout.jade
@@ -2,7 +2,12 @@
 html(lang="en-us")
 	head
 		meta(charset="utf-8")
+		if page_title
+			title #{ page_title } &mdash; #{ title }
+		else
+			title #{ title }
 		link(rel="stylesheet", href="/main.css")
+		link(rel="canonical", href="#{ root_url }/#{ current.source }")
 	body
 		!= partial("_shared/header")
 		!= partial("_shared/nav")
