Converted to public harp structure

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -6,7 +6,7 @@ html(lang="en-us")
 			title #{ page_title } &mdash; #{ title }
 		else
 			title #{ title }
-		link(rel="stylesheet", href="/main.css")
+		link(rel="stylesheet", href="/css/main.css")
 		link(rel="canonical", href="#{ root_url }/#{ current.source }")
 	body
 		!= partial("_shared/header")
