--- a/public/_shared/header.jade
+++ b/public/_shared/header.jade
@@ -1,3 +1,4 @@
 header(role="header")
-	h1 Eli Gundry
-	h2 Web developer with a love of standards
+	h1
+		a(href="/", rel="root") Eli Gundry
+	h2 Full stack web developer with a love of standards
