--- a/public/_shared/nav.jade
+++ b/public/_shared/nav.jade
@@ -1,5 +1,5 @@
-nav(role="navigation")
-	a(href="/") Home
-	a(href="/blog") Blog
+nav(role="navigation", class="top-nav")
+	a(href="/", rel="root") Home
 	a(href="/about") About
+	a(href="/blog") Blog
 	a(href="/resume") Resume
