Completed the resume page, working on the about page

--- a/public/_layout.jade
+++ b/public/_layout.jade
@@ -6,7 +6,10 @@ html(lang="en-us")
 			title #{ page_title } &mdash; #{ title }
 		else
 			title #{ title }
+		if description
+			meta(name="description", content="#{ description }")
 		meta(name="generator", content="http://harpjs.com")
+		link(rel="author", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="/assets/css/main.css")
 		link(rel="canonical", href="#{ root_url }/#{ current.source }")
 	body(id="#{ current.source }")
