--- a/public/_shared/header.jade
+++ b/public/_shared/header.jade
@@ -1,4 +1,4 @@
-header(role="header")
+header(role="header", class="top-header")
 	h1
 		a(href="/", rel="root") Eli Gundry
-	h2 Full stack web developer with a love of standards
+	h2 Full stack web developer with a love of web standards
