--- a/public/_shared/nav.jade
+++ b/public/_shared/nav.jade
@@ -2,4 +2,5 @@ nav(role="navigation", class="top-nav")
 	a(href="/", rel="root") Home
 	a(href="/about") About
 	a(href="/blog") Blog
+	a(href="/portfolio") Portfolio
 	a(href="/resume") Resume
