Added the semantic grid system.

--- a/public/about.jade
+++ b/public/about.jade
@@ -21,7 +21,8 @@ section
 
 		* Tabs over spaces
 		* Vim over Emacs
+		* I do all my programming in a terminal
 		* The Browns will win a Super Bowl in my life time
 
 aside
-	img(src="assets/images/hopeful-eli-gundry.jpg")
+	img(src="assets/images/hopeful-eli-gundry.jpg", alt="Eli Gundry", title="Eli Gundry", width=300, height=300)
