--- a/public/assets/css/_footer.less
+++ b/public/assets/css/_footer.less
@@ -3,13 +3,13 @@
 	font-size: .9em;
 	padding-top: .5em;
 	margin-bottom: 2em;
+	.clearfix();
 
 	address {
 		font-style: normal;
 
 		div {
-			float: left;
-			margin-right: 5em;
+			.column(3);
 		}
 
 		strong, span, a {
