--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -1,3 +1,11 @@
+// Grid System
+//==============================================================================
+
+@columns: 12;
+@column-width: 95;
+@gutter-width: 0;
+@total-width: 70%;
+
 // Links
 //==============================================================================
 
