--- a/public/assets/css/about.less
+++ b/public/assets/css/about.less
@@ -1,19 +1,15 @@
 #about main {
-	section, aside {
-		display: inline-block;
-	}
-
 	section {
-		width: 60%;
+		.column(11);
 	}
 
 	aside {
 		border-left: 2px solid #444;
-		width: 40%;
+		.column(6);
 
 		img {
 			display: block;
-			margin: 0 auto;
+			margin: 1em auto;
 		}
 	}
 }
