Added ga and a sitemap

--- a/public/about.jade
+++ b/public/about.jade
@@ -26,3 +26,7 @@ section
 
 aside
 	img(src="assets/images/hopeful-eli-gundry.jpg", alt="Eli Gundry", title="Eli Gundry", width=300, height=300)
+	h3 Around The Web
+	a(href="https://twitter.com/EliGundry") Twitter
+	a(href="https://github.com/eligundry") GitHub
+	a(href="https://facebook.com/eligundry") Facebook
