--- a/public/about.jade
+++ b/public/about.jade
@@ -19,10 +19,12 @@ section
 
 		## Quick Facts About Eli
 
-		* Tabs over spaces
-		* Vim over Emacs
-		* I do all my programming in a terminal
-		* The Browns will win a Super Bowl in my life time
+		* Tabs over spaces.
+		* Vim over Emacs.
+		* Linux, OS X, Windows. In that order.
+		* I do all my programming in a terminal.
+		* Helvetica is clearly the best font ever.
+		* The Browns will win a Super Bowl in my life time.
 
 aside
 	img(src="assets/images/hopeful-eli-gundry.jpg", alt="Eli Gundry", title="Eli Gundry", width=300, height=300)
@@ -30,3 +32,4 @@ aside
 	a(href="https://twitter.com/EliGundry") Twitter
 	a(href="https://github.com/eligundry") GitHub
 	a(href="https://facebook.com/eligundry") Facebook
+	a(href="https://last.fm/eli_pwnd") Last.FM
