--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -15,3 +15,4 @@
 //==============================================================================
 
 @sansFontFamily: "Helvetica", sans-serif;
+@monospaceFontFamily: monospace;
