--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -1,11 +1,10 @@
 @import "_normalize";
 @import "_grid";
 @import "_variables";
+@import (less) "icomoon.css";
 
 // General Element Styling
 //==============================================================================
-
-
 
 body {
 	color: #444;
@@ -25,7 +24,7 @@ a {
 	}
 
 	&:hover, &focus {
-		border-bottom: 1px solid #f00;
+		border-bottom: 2px solid #f00;
 		outline: none;
 	}
 }
@@ -49,3 +48,4 @@ ul {
 
 @import "about";
 @import "resume";
+@import "blog";
