--- a/public/assets/css/_footer.less
+++ b/public/assets/css/_footer.less
@@ -12,8 +12,17 @@
 			.column(3);
 		}
 
-		strong, span, a {
+		strong {
 			display: block;
+		}
+
+		.web a {
+			font-size: 2em;
+			margin-right: 5px;
+
+			&:hover, &:focus {
+				border-bottom: 0;
+			}
 		}
 	}
 }
