Drastically altered the structure to deploy to my webserver

--- a/_shared/footer.jade
+++ b/_shared/footer.jade
@@ -8,5 +8,5 @@ footer(role="contentinfo", class="footer")
 			span 330.828.6147
 		div(class="web")
 			strong Web
-			a(href="https://twitter.com/#{ url.twitter }", class="icon-twitter")
-			a(href="https://github.com/#{ url.github }", class="icon-github")
+			a(href="https://twitter.com/#{ twitter }", class="icon-twitter")
+			a(href="https://github.com/#{ github }", class="icon-github")
