--- a/_shared/google-analytics.ejs
+++ b/_shared/google-analytics.ejs
@@ -4,5 +4,5 @@
 	e=o.createElement(i);r=o.getElementsByTagName(i)[0];
 	e.src='//www.google-analytics.com/analytics.js';
 	r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-	ga('create','UA-41741300-1');ga('send','pageview');
+	ga('create','<%= google_analytics %>');ga('send','pageview');
 </script>
