Added a sitemap and RSS feed to the site.

--- a/_layout.jade
+++ b/_layout.jade
@@ -12,6 +12,7 @@ html(lang="en-us")
 		link(rel="author", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="/assets/css/main.css")
 		link(rel="canonical", href="#{ root_url }/#{ current.source }")
+		link(rel="alternate", type="application/rss+xml", title="RSS", href="#{ root_url }/feed.xml")
 	body(id="#{ current.source }")
 		!= partial("_shared/header")
 		!= partial("_shared/nav")
