Changed the font style

--- a/_layout.jade
+++ b/_layout.jade
@@ -10,6 +10,7 @@ html(lang="en-us")
 			meta(name="description", content="#{ description }")
 		meta(name="generator", content="http://harpjs.com")
 		link(rel="author", href="#{ root_url }/humans.txt")
+		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
 		link(rel="canonical", href="#{ root_url }/#{ current.source }")
 		link(rel="alternate", type="application/rss+xml", title="RSS", href="#{ root_url }/feed.xml")
@@ -19,4 +20,4 @@ html(lang="en-us")
 		main(role="main")
 			!= yield
 		!= partial("_shared/footer")
-		!= partial("_shared/google-analytics")
+		!= partial("_shared/scripts")
