--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -14,5 +14,6 @@
 // Typography
 //==============================================================================
 
-@sansFontFamily: "Helvetica", sans-serif;
+@sansFontFamily: "Raleway", sans-serif;
+@serifFontFamily: "Goudy Bookletter 1911", serif;
 @monospaceFontFamily: monospace;
