--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -2,16 +2,21 @@
 @import "_grid";
 @import "_variables";
 @import (less) "icomoon.css";
+@import (less) "prism-solarized-dark.css";
 
 // General Element Styling
 //==============================================================================
 
 body {
 	color: #444;
-	font-family: @sansFontFamily;
+	font-family: @serifFontFamily;
 	font-size: 16px;
 	margin: 0 auto;
 	width: @total-width;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-family: @sansFontFamily;
 }
 
 a {
