--- a/blog/_blog-layout-loop.jade
+++ b/blog/_blog-layout-loop.jade
@@ -10,8 +10,10 @@ html(lang="en-us")
 			meta(name="description", content="#{ description }")
 		meta(name="generator", content="http://harpjs.com")
 		link(rel="author", href="#{ root_url }/humans.txt")
+		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
-		link(rel="canonical", href="#{ root_url }/#{ current.source }")
+		link(rel="canonical", href="#{ root_url }/blog/#{ current.source }")
+		link(rel="alternate", type="application/rss+xml", title="RSS", href="#{ root_url }/feed.xml")
 	body(id="#{ current.source }")
 		!= partial("../_shared/header")
 		!= partial("../_shared/nav")
@@ -20,4 +22,4 @@ html(lang="en-us")
 			!= yield
 
 		!= partial("../_shared/footer")
-		!= partial("../_shared/google-analytics")
+		!= partial("../_shared/scripts")
