Started making site more responsive

--- a/_shared/footer.jade
+++ b/_shared/footer.jade
@@ -5,7 +5,7 @@ footer(role="contentinfo", class="footer")
 			a(href="mailto:#{ email }") #{ email }
 		div(class="phone")
 			strong Phone
-			span 330.828.6147
+			a(href="tel:3308286147") 330.828.6147
 		div(class="web")
 			strong Web
 			a(href="https://twitter.com/#{ twitter }", class="icon-twitter")
