--- a/assets/css/_variables.less
+++ b/assets/css/_variables.less
@@ -6,14 +6,16 @@
 @gutter-width: 0;
 @total-width: 70%;
 
-// Links
+// Colors
 //==============================================================================
 
+@textColor: #444;
 @linkColor: #f00;
 
 // Typography
 //==============================================================================
 
+@defaultFontSize: 18px;
 @sansFontFamily: "Raleway", sans-serif;
 @serifFontFamily: "Goudy Bookletter 1911", serif;
 @monospaceFontFamily: monospace;
