--- a/_layout.jade
+++ b/_layout.jade
@@ -8,9 +8,10 @@ html(lang="en-us")
 			title #{ title }
 		if description
 			meta(name="description", content="#{ description }")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
 		link(rel="author", href="#{ root_url }/humans.txt")
-		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
+		link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
 		link(rel="canonical", href="#{ root_url }/#{ current.source }")
 		link(rel="alternate", type="application/rss+xml", title="RSS", href="#{ root_url }/feed.xml")
