--- a/assets/css/blog.less
+++ b/assets/css/blog.less
@@ -1,6 +1,6 @@
 .blog-post main {
 	header {
-		border-bottom: 2px solid #444;
+		border-bottom: 2px solid @textColor;
 		padding-bottom: 1em;
 
 		h1 {
@@ -17,58 +17,9 @@
 	}
 
 	section {
-		border-bottom: 2px solid #444;
+		border-bottom: 2px solid @textColor;
 		margin-bottom: 1em;
 
-		ul, ol {
-			padding-left: 0;
-
-			ul, ol {
-				padding-left: 40px;
-			}
-		}
-
-		ol {
-			ol {
-				list-style-type: lower-alpha;
-			}
-		}
-
-		figcaption {
-			font-style: italic;
-			text-align: center;
-		}
-
-		blockquote {
-			background-color: rgba(0, 0, 0, .1);
-			border-left: #f00 solid 30px;
-			border-radius: 0 .5em .5em 0;
-			margin: 1em 0;
-			padding: .5em 1em;
-		}
-
-		.pull-quote {
-			background-color: transparent;
-			border: 5px solid red;
-			border-width: 5px 0;
-			border-radius: 0;
-			font-size: 1.5em;
-			font-family: @sansFontFamily;
-			font-style: italic;
-			font-weight: bold;
-			margin-top: 0;
-			width: 20%;
-		}
-
-		.pull-right {
-			float: right;
-			margin-left: 20px;
-		}
-
-		.pull-left {
-			float: left;
-			margin-right: 20px;
-		}
 	}
 
 	footer {
