--- a/blog/_layout.jade
+++ b/blog/_layout.jade
@@ -8,6 +8,7 @@ html(lang="en-us")
 			title #{ title }
 		if excerpt
 			meta(name="description", content="#{ excerpt }")
+		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
 		link(rel="author", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
