Switched from .me to .com

--- a/assets/css/blog.less
+++ b/assets/css/blog.less
@@ -1,6 +1,6 @@
 .blog-post main {
 	header {
-		border-bottom: 2px solid @textColor;
+		border-bottom: 2px solid #444;
 		padding-bottom: 1em;
 
 		h1 {
@@ -17,7 +17,7 @@
 	}
 
 	section {
-		border-bottom: 2px solid @textColor;
+		border-bottom: 2px solid #444;
 		margin-bottom: 1em;
 
 	}
