Added a blog post and tightened up styles

--- a/_shared/footer.jade
+++ b/_shared/footer.jade
@@ -9,4 +9,5 @@ footer(role="contentinfo", class="footer")
 		div(class="web")
 			strong Web
 			a(href="https://twitter.com/#{ twitter }", class="icon-twitter")
+			a(href="https://facebook.com/#{ facebook }", class="icon-facebook")
 			a(href="https://github.com/#{ github }", class="icon-github")
