--- a/about.jade
+++ b/about.jade
@@ -23,13 +23,12 @@ section
 		* Vim over Emacs.
 		* Linux, OS X, Windows. In that order.
 		* I do all my programming in a terminal.
-		* Helvetica is clearly the best font ever.
 		* The Browns will win a Super Bowl in my life time.
 
-aside
-	img(src="assets/images/hopeful-eli-gundry.jpg", alt="Eli Gundry", title="Eli Gundry", width=300, height=300)
-	h3 Around The Web
-	a(href="https://twitter.com/EliGundry") Twitter
-	a(href="https://github.com/eligundry") GitHub
-	a(href="https://facebook.com/eligundry") Facebook
-	a(href="https://last.fm/eli_pwnd") Last.FM
+		## How I made this site
+
+		Every page on this website is static, which leads to quicker load times,
+		easy deployment, and unparalleled security. Which is not to say that I
+		didn't have help. I generate this site using [harp.js](http://harpjs.com/),
+		a [node.js](http://nodejs.org/) static site generator. It's a joy to work
+		with and I highly reccomend it.
