--- a/assets/css/blog.less
+++ b/assets/css/blog.less
@@ -1,3 +1,13 @@
+.blog-loop article {
+	h2 {
+		margin-bottom: 0;
+	}
+
+	p {
+		margin-top: 0;
+	}
+}
+
 .blog-post main {
 	header {
 		border-bottom: 2px solid #444;
