--- a/blog/_layout.jade
+++ b/blog/_layout.jade
@@ -10,6 +10,7 @@ html(lang="en-us")
 			meta(name="description", content="#{ excerpt }")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
+		meta(name="msapplication-navbutton-color", content="#f00")
 		link(rel="author", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
