--- a/_layout.jade
+++ b/_layout.jade
@@ -8,8 +8,11 @@ html(lang="en-us")
 			title #{ title }
 		if description
 			meta(name="description", content="#{ description }")
+		else
+			meta(name="description", content="#{ site_description }")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
+		meta(name="msapplication-navbutton-color", content="#f00")
 		link(rel="author", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
