--- a/blog/_blog-layout-loop.jade
+++ b/blog/_blog-layout-loop.jade
@@ -10,12 +10,13 @@ html(lang="en-us")
 			meta(name="description", content="#{ description }")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
+		meta(name="msapplication-navbutton-color", content="#f00")
 		link(rel="author", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
 		link(rel="canonical", href="#{ root_url }/blog/#{ current.source }")
 		link(rel="alternate", type="application/rss+xml", title="RSS", href="#{ root_url }/feed.xml")
-	body(id="#{ current.source }")
+	body(id="#{ current.source }", class="blog-loop")
 		!= partial("../_shared/header")
 		!= partial("../_shared/nav")
 
