Tweaked the responsive styles to look super nice

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -10,7 +10,7 @@
 body {
 	color: @textColor;
 	font-family: @serifFontFamily;
-	font-size: @defaultFontSize;
+	font-size: 20px;
 	margin: 0 auto;
 	width: @total-width;
 }
