--- a/assets/css/responsive.less
+++ b/assets/css/responsive.less
@@ -1,8 +1,17 @@
 @import "_grid";
 
-@media all and (max-device-width: 640px) and (max-width: 640px) {
+@media screen and (max-device-width: 640px) and (max-width: 640px) {
 	body {
-		width: 90%;
+		font-size: 16px;
+		width: 87%;
+	}
+
+	.top-header h2 {
+		display: none;
+	}
+
+	figure, figure img {
+		max-width: 100%;
 	}
 
 	figure img {
@@ -32,5 +41,15 @@
 		address div {
 			.column(12);
 		}
+	}
+}
+
+@media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
+	body {
+		width: 90%;
+	}
+
+	.pull-quote {
+		width: 40%;
 	}
 }
