--- a/_layout.jade
+++ b/_layout.jade
@@ -13,7 +13,8 @@ html(lang="en-us")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
 		meta(name="msapplication-navbutton-color", content="#f00")
-		link(rel="author", href="#{ root_url }/humans.txt")
+		link(rel="author", href="https://plus.google.com/u/0/107552919918829140808/?rel=author")
+		link(rel="humans", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="//fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
 		link(rel="stylesheet", href="/assets/css/main.css")
 		link(rel="canonical", href="#{ root_url }/#{ current.source }")
