Fixed a typo on the about page.

--- a/about.jade
+++ b/about.jade
@@ -31,4 +31,4 @@ section
 		easy deployment, and unparalleled security. Which is not to say that I
 		didn't have help. I generate this site using [harp.js](http://harpjs.com/),
 		a [node.js](http://nodejs.org/) static site generator. It's a joy to work
-		with and I highly reccomend it.
+		with and I highly recommend it.
