Added dns prefetching

--- a/about.jade
+++ b/about.jade
@@ -2,6 +2,11 @@ section
 	:markdown
 		# I'm a simple man in a complex world&hellip;
 
+		<figure class="pull-right">
+			<img src="/assets/images/hopeful-eli-gundry.jpg" />
+			<figcaption>Ths is me looking pretty dang happy!</figcaption>
+		</figure>
+
 		Hi there, I'm Eli Gundry and I think the title says everything you need
 		to know about me. I love everything to be as simple as possible. Simple
 		life leads to less stress. A simple design is easy to understand, even
