--- a/blog/_blog-layout-loop.jade
+++ b/blog/_blog-layout-loop.jade
@@ -11,6 +11,8 @@ html(lang="en-us")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(name="generator", content="http://harpjs.com")
 		meta(name="msapplication-navbutton-color", content="#f00")
+		link(rel="dns-prefetch", href="//fonts.googleapis.com")
+		link(rel="dns-prefetch", href="//www.google-analytics.com")
 		link(rel="author", href="https://plus.google.com/u/0/107552919918829140808/?rel=author")
 		link(rel="humans", href="#{ root_url }/humans.txt")
 		link(rel="stylesheet", href="http://fonts.googleapis.com/css?family=Raleway:400,700|Goudy+Bookletter+1911")
