Changes all fonts to Helvetica
Removes old lame blog post

--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -16,6 +16,7 @@
 //==============================================================================
 
 @defaultFontSize: 20px;
-@sansFontFamily: "Raleway", sans-serif;
-@serifFontFamily: "Goudy Bookletter 1911", serif;
+@sansFontFamily: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+@sansFontWeight: 300;
+@serifFontFamily: Georgia, serif;
 @monospaceFontFamily: monospace;
