--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -9,14 +9,16 @@
 
 body {
 	color: @textColor;
-	font-family: @serifFontFamily;
+	font-family: @sansFontFamily;
 	font-size: 20px;
+	font-weight: @sansFontWeight;
 	margin: 0 auto;
 	width: @total-width;
 }
 
 h1, h2, h3, h4, h5, h6 {
 	font-family: @sansFontFamily;
+	font-weight: @sansFontWeight;
 }
 
 a {
@@ -102,6 +104,7 @@ blockquote {
 	border-radius: 0;
 	font-size: 1.5em;
 	font-family: @sansFontFamily;
+	font-weight: @sansFontWeight;
 	font-style: italic;
 	font-weight: bold;
 	margin-top: 0;
