Adds twitter widget to home page

--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -136,6 +136,7 @@ blockquote {
 // Styling for specific pages
 //==============================================================================
 
+@import "index";
 @import "about";
 @import "resume";
 @import "blog";
