--- a/public/assets/css/responsive.less
+++ b/public/assets/css/responsive.less
@@ -42,6 +42,11 @@
 			.column(12);
 		}
 	}
+
+	#twitter-widget-0 {
+		float: none;
+		margin-left: 0 !important;
+	}
 }
 
 @media screen and (min-device-width: 768px) and (max-device-width: 1024px) {
