Fixes focus state

--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -20,3 +20,8 @@
 @sansFontWeight: 300;
 @serifFontFamily: Georgia, serif;
 @monospaceFontFamily: monospace;
+
+// Event States
+//==============================================================================
+@focusOutline: none;
+@focusBorder: 2px solid #f00;
