Centers twitter widget

--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -55,7 +55,7 @@ ul {
 		li:before {
 			font-size: .7em;
 			color: @linkColor;
-			content: '\25A0';
+			content: '■';
 			left: -10px;
 			position: relative;
 			top: -2px;
