--- a/public/assets/css/index.less
+++ b/public/assets/css/index.less
@@ -1,4 +1,5 @@
 #twitter-widget-0 {
-	float: right;
-	margin: 10px 0 10px 10px !important;
+	display: block !important;
+	margin: 10px auto !important;
+	position: initial !important;
 }
