Fixes some nasty less

--- a/public/_shared/footer.jade
+++ b/public/_shared/footer.jade
@@ -1,13 +1,21 @@
 footer(role="contentinfo", class="footer")
 	address
 		div(class="email")
-			strong Email
+			i(class="fa fa-envelope-o", title="Email")
+				span(class="hidden") Email
 			a(href="mailto:#{ email }") #{ email }
 		div(class="phone")
-			strong Phone
+			i(class="fa fa-phone", title="Phone")
+				span(class="hidden") Phone
 			a(href="tel:3308286147") 330.828.6147
 		div(class="web")
-			strong Web
-			a(href="https://twitter.com/#{ twitter }", class="icon-twitter")
-			a(href="https://facebook.com/#{ facebook }", class="icon-facebook")
-			a(href="https://github.com/#{ github }", class="icon-github")
+			i(class="fa fa-globe", title="Web")
+				span(class="hidden") Web
+			a(href="https://twitter.com/#{ twitter }", title="Twitter")
+				i(class="fa fa-twitter-square")
+			a(href="https://facebook.com/#{ facebook }", title="Facebook")
+				i(class="fa fa-facebook-square")
+			a(href="https://github.com/#{ github }", title="Github")
+				i(class="fa fa-github-square")
+			a(href="/feed.xml", title="RSS")
+				i(class="fa fa-rss-square")
