--- a/public/_shared/meta.jade
+++ b/public/_shared/meta.jade
@@ -1,10 +1,13 @@
 meta(name="viewport", content="width=device-width, initial-scale=1.0")
 meta(name="generator", content="http://harpjs.com")
 meta(name="msapplication-navbutton-color", content="#f00")
+link(rel="dns-prefetch", href="//platform.twitter.com")
+link(rel="dns-prefetch", href="//maxcdn.bootstrapcdn.com")
 link(rel="dns-prefetch", href="//www.google-analytics.com")
 link(rel="dns-prefetch", href="//eligundry.disqus.com")
 link(rel="author", href="https://plus.google.com/u/0/107552919918829140808/?rel=author")
 link(rel="humans", href="#{ root_url }/humans.txt")
+link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css")
 link(rel="stylesheet", href="/assets/css/main.css")
 link(rel="canonical", href="#{ root_url }/#{ current.source }")
 link(rel="alternate", type="application/rss+xml", title="RSS", href="#{ root_url }/feed.xml")
