--- a/public/assets/css/blog.less
+++ b/public/assets/css/blog.less
@@ -29,6 +29,11 @@
 	section {
 		border-bottom: 2px solid #444;
 		margin-bottom: 1em;
+
+		h1 {
+			font-size: 1.75em;
+			margin: .5em 0;
+		}
 	}
 
 	footer {
