--- a/public/assets/css/responsive.less
+++ b/public/assets/css/responsive.less
@@ -1,5 +1,3 @@
-@import "_grid";
-
 @media screen and (max-device-width: 640px) and (max-width: 640px) {
 	body {
 		font-size: 16px;
@@ -39,7 +37,8 @@
 
 	.footer {
 		address div {
-			.column(12);
+			display: block;
+			float: none;
 		}
 	}
 
@@ -56,5 +55,12 @@
 
 	.pull-quote {
 		width: 40%;
+	}
+
+	.footer {
+		address div {
+			display: block;
+			float: none;
+		}
 	}
 }
