Makes time smaller and adds a calendar before it

--- a/public/blog/_blog-layout-loop.jade
+++ b/public/blog/_blog-layout-loop.jade
@@ -1,9 +1,9 @@
-!!!
+doctype html
 html(lang="en-us")
 	head
 		meta(charset="utf-8")
 		if page_title
-			title #{ page_title } &mdash; #{ title }
+			title #{ post_title } &mdash; #{ title }
 		else
 			title #{ title }
 		if description
