--- a/public/assets/css/blog.less
+++ b/public/assets/css/blog.less
@@ -8,6 +8,22 @@
 	}
 }
 
+.blog-post main,
+.blog-loop article {
+	.fa {
+		margin-right: 4px;
+	}
+
+	.fa,
+	time {
+		font-size: .8em;
+	}
+
+	time {
+		font-weight: bold;
+	}
+}
+
 .blog-post main {
 	header {
 		border-bottom: 2px solid #444;
@@ -15,14 +31,6 @@
 
 		h1 {
 			margin-bottom: 0;
-		}
-
-		time {
-			&:before {
-				content: " ■ ";
-				font-size: .9em;
-				vertical-align: top;
-			}
 		}
 	}
 
