--- a/public/blog/_layout.jade
+++ b/public/blog/_layout.jade
@@ -20,6 +20,7 @@ html(lang="en-us")
 					h1(itemprop="name")
 						a(href="#{ root_url }/blog/#{ current.source }", itemprop="url") #{ post_title }
 					meta(itemprop="author", content="#{ author }")
+					i(class="fa fa-calendar")
 					time(itemprop="datePublished", datetime="#{ dateTime }") #{ date }
 				section(itemprop="articleBody")
 					!= yield
