--- a/public/blog/index.jade
+++ b/public/blog/index.jade
@@ -3,5 +3,7 @@ each post, slug in public.blog._data
 		article(itemprop="blogPosts", itemscope, itemtype="http://schema.org/BlogPosting")
 			h2(itemprop="title")
 				a(href="/blog/#{ slug }", itemprop="url") #{ post.post_title }
+			meta(itemprop="author", content="#{ author }")
+			i(class="fa fa-calendar")
 			time(itemprop="datePublished", datetime="#{ post.dateTime }") #{ post.date }
 			p(itemprop="description") #{ post.excerpt }
