Adds solarized light for prisim
Switches to that as well. Also add last.fm link to the footer

--- a/public/_shared/footer.jade
+++ b/public/_shared/footer.jade
@@ -20,5 +20,7 @@ footer(role="contentinfo", class="footer")
 				i(class="fa fa-twitter-square")
 			a(href="https://facebook.com/#{ facebook }", title="Facebook", itemprop="url")
 				i(class="fa fa-facebook-square")
+			a(href="http://www.last.fm/user/#{ last_fm }", title="Last.fm", itemprop="url")
+				i(class="fa fa-lastfm-square")
 			a(href="/feed.xml", title="RSS")
 				i(class="fa fa-rss-square")
