--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -25,3 +25,8 @@
 //==============================================================================
 @focusOutline: none;
 @focusBorder: 2px solid #f00;
+
+// Misc.
+//==============================================================================
+@dividerHeight: 3px;
+@dividerColor: @textColor;
