--- a/public/assets/css/_header.less
+++ b/public/assets/css/_header.less
@@ -10,7 +10,7 @@
 }
 
 .top-nav {
-	border-bottom: 2px solid #444;
+	border-bottom: @dividerHeight solid @dividerColor;
 	padding-bottom: .5em;
 
 	a {
