--- a/public/assets/css/blog.less
+++ b/public/assets/css/blog.less
@@ -27,7 +27,7 @@
 
 .blog-post main {
 	header {
-		border-bottom: 2px solid #444;
+		border-bottom: @dividerHeight solid @dividerColor;
 		padding-bottom: 1em;
 
 		h1 {
@@ -36,8 +36,9 @@
 	}
 
 	section {
-		border-bottom: 2px solid #444;
+		border-bottom: @dividerHeight solid @dividerColor;
 		margin-bottom: 1em;
+		padding-bottom: 1em;
 
 		h1 {
 			font-size: 1.75em;
