Makes entire website much more print friendly

--- a/public/_shared/footer.jade
+++ b/public/_shared/footer.jade
@@ -15,12 +15,12 @@ footer(role="contentinfo", class="footer")
 			i(class="fa fa-globe", title="Web")
 				span(class="hidden") Web
 			a(href="https://github.com/#{ github }", title="Github", itemprop="url")
-				i(class="fa fa-github-square")
+				i(class="fa fa-github-square print-hide")
 			a(href="https://twitter.com/#{ twitter }", title="Twitter", itemprop="url")
-				i(class="fa fa-twitter-square")
-			a(href="https://facebook.com/#{ facebook }", title="Facebook", itemprop="url")
-				i(class="fa fa-facebook-square")
-			a(href="http://www.last.fm/user/#{ last_fm }", title="Last.fm", itemprop="url")
-				i(class="fa fa-lastfm-square")
-			a(href="/feed.xml", title="RSS")
-				i(class="fa fa-rss-square")
+				i(class="fa fa-twitter-square print-hide")
+			a(href="https://facebook.com/#{ facebook }", title="Facebook", itemprop="url", class="resume-hide")
+				i(class="fa fa-facebook-square print-hide")
+			a(href="http://www.last.fm/user/#{ last_fm }", title="Last.fm", itemprop="url", class="resume-hide")
+				i(class="fa fa-lastfm-square print-hide")
+			a(href="/feed.xml", title="RSS", class="print-hide")
+				i(class="fa fa-rss-square print-hide")
