--- a/public/assets/css/_footer.less
+++ b/public/assets/css/_footer.less
@@ -1,5 +1,5 @@
 .footer {
-	border-top: @dividerHeight solid @dividerColor;
+	border-top: @divider;
 	font-size: .9em;
 	padding-top: .5em;
 	margin-bottom: 2em;
