--- a/public/assets/css/_variables.less
+++ b/public/assets/css/_variables.less
@@ -28,5 +28,4 @@
 
 // Misc.
 //==============================================================================
-@dividerHeight: 3px;
-@dividerColor: @textColor;
+@divider: 3px solid @textColor;
