--- a/public/assets/css/blog.less
+++ b/public/assets/css/blog.less
@@ -27,7 +27,7 @@
 
 .blog-post main {
 	header {
-		border-bottom: @dividerHeight solid @dividerColor;
+		border-bottom: @divider;
 		padding-bottom: 1em;
 
 		h1 {
@@ -36,7 +36,7 @@
 	}
 
 	section {
-		border-bottom: @dividerHeight solid @dividerColor;
+		border-bottom: @divider;
 		margin-bottom: 1em;
 		padding-bottom: 1em;
 
