--- a/public/assets/css/main.less
+++ b/public/assets/css/main.less
@@ -39,7 +39,7 @@ main {
 }
 
 hr {
-	border-top: @dividerHeight solid  @dividerColor;
+	border-top: @divider;
 	margin: 1em auto;
 	width: 80%;
 }
@@ -202,3 +202,4 @@ blockquote {
 //==============================================================================
 
 @import "responsive";
+@import "print";
