--- a/public/assets/css/resume.less
+++ b/public/assets/css/resume.less
@@ -1,6 +1,14 @@
 #resume main {
 	h2 {
 		margin-bottom: 0;
+
+		&:after {
+			border-bottom: @divider;
+			content: ' ';
+			display: block;
+			margin-top: -6px;
+			width: 80%;
+		}
 	}
 
 	h2 + h3 {
@@ -8,7 +16,7 @@
 	}
 
 	h3 {
-		margin-bottom: .2em;
+		margin-bottom: -4px;
 
 		sup {
 			font-size: .6em;
@@ -17,6 +25,7 @@
 	}
 
 	h4 {
+		font-size: .9em;
 		margin: 0;
 	}
 }
