--- a/public/_shared/footer.jade
+++ b/public/_shared/footer.jade
@@ -1,5 +1,5 @@
 footer(role="contentinfo", class="footer")
-	address(itemscope, itemtype="http://schema.org/Person")
+	address
 		meta(itemprop="name", content="Eli Gundry")
 		div(class="email")
 			i(class="fa fa-envelope-o", title="Email")
